2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: import ChildModel

2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/UndoHistory.py: Add new file.
	* src/ViewManager.py: undo history support.
	* src/GrampsDb/_GrampsDbBase.py (Transaction.__init__): Add
	timestamp to the transaction.
	(GrampsDbBase.redo): Update undo history window.
	(GrampsDbBase.undo): Update undo history window.
	(GrampsDbBase.transaction_commit): Update undo history window.
	(GrampsDbBase.transaction_commit): Set transaction timestamp.
	(GrampsDbBase.__init__): Define undo_history_callback.
	* src/Makefile.am (gdir_PYTHON): Ship new file.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: nickname changes
	* src/GrampsDb/_ReadXML.py: nickname changes
	* src/GrampsDb/_WriteGedcom.py: nickname changes
	* src/GrampsDb/_WriteXML.py: nickname changes
	* src/Editors/_EditPerson.py: nickname/call name changes
	* src/Editors/_EditName.py: nickname/call name changes
	* src/RelLib/_AttributeType.py: nickname changes
	* src/RelLib/_Name.py: call name changes
	* src/RelLib/_Person.py: nickname changes
	* src/MergePeople.py: nickname elimination

2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_MediaBackRefList.py: Import model.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Add nickname
	upgrade.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: Add undo history menu entry

2006-05-04  Alex Roitman  <shura@gramps-project.org>

	* src/Makefile.am (gdir_PYTHON): Remove DisplayTabs.py.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship rel_sk.py.

	* src/Filters/Rules/Makefile.am (pkgdata_PYTHON): Add mising files.
	* src/DisplayTabs.py: remove file.
	* src/DisplayTabs: Add package.

2006-05-04  Don Allingham  <don@gramps-project.org>
	* src/glade/gramps.glade: add call name field, add id fields
	* src/glade/edit_person.glade: add call name field